# TestIt

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  compose.yml  pyproject.toml  requirements.in  requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
bot/telegram/: README.md
bots/: __init__.py
bots/telegram/: README.md
contracts/: core.api.v1.yaml  core.llm-client.v1.yaml  plugin.contract.v1.yaml  registry.yaml
core/: README.md  __init__.py  main.py
core/api/: README.md
core/app/: __init__.py  dependencies.py  main.py
core/db/: README.md
core/llm_client/: README.md
core/logging/: README.md
core/migrations/: README.md
core/plugin_manager/: README.md
core/schemas/: README.md
core/security/: README.md
core/tests/: __init__.py
docker/: README.md
docs/: ARCHITECTURE.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  QUESTIONS.md  ROADMAP.md  SECURITY.md  TRIGGERS.md
docs/CONTRACTS/: CORE.md  LLM_CLIENT.md  README.md
docs/ISSUES/: README.md
docs/METRICS/: STATE_DEFINITIONS.md
docs/PLANS/: MVP_DEPENDENCIES.md
docs/PROTOCOLS/: DEV_SESSION.md  PLUGIN_LIFECYCLE.md  README.md  RELEASE_PIPELINE.md
docs/contracts/: README.md
docs/decisions/: README.md  adr-0001-llm-integration.md
docs/meta/: README.md  anchors.md  status_ru.md
docs/protocols/: README.md
docs/roadmap/: README.md
experiments/: README.md
human-friendly/: AGGREGATION_PROTOCOL.md  README.md  SUMMARY.md
libs/: __init__.py
metrics/: README.md  registry.yaml
ops/: README.md
plugins/: README.md  __init__.py
protocols/: migration.md  mr.md  plugin-scaffold.md  registry.yaml  release.md
scripts/: README.md
tests/: README.md
triggers/: README.md  registry.yaml
(+86 files in other folders)
